added link to git and styled it, made changes to script and stylesheet to simplify

--- a/index.html
+++ b/index.html
@@ -141,6 +141,13 @@
         </div>
       </div>
     </div>
+    <div>
+      <p class="coder">
+        <a href="https://github.com/kprathyusha/weather-app" target="blank"
+          >Open-source code by</a
+        ><span> Prathyusha K</span>
+      </p>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
