--- a/index.html
+++ b/index.html
@@ -61,10 +61,16 @@
           <p class="date-time" id="dateTime">Tuesday, Mar 1, 6:00 p.m</p>
         </div>
         <div class="row align-items-center current-city-details">
-          <div class="col">
-            <i class="fa-solid fa-sun weather-icon"></i>
+          <div class="col-3">
+            <img
+              src="http://openweathermap.org/img/wn/10d@2x.png"
+              alt="clear"
+              class="weather-icon"
+              id="weatherIcon"
+            />
+            <!-- <i class="fa-solid fa-sun weather-icon"></i> -->
           </div>
-          <div class="col">
+          <div class="col-5">
             <span class="temperature" id="degrees">-6</span>
             <span class="units">
               <a href="#" class="celsius" id="celsiusLink">°C</a> |<a
@@ -78,7 +84,7 @@
               Feels like -14°
             </p>
           </div>
-          <div class="col">
+          <div class="col-4">
             <ul class="weather-pattern">
               <li class="weather-description" id="weatherDescription">Sunny</li>
               <li>
