--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
           <div class="col-5">
             <span class="temperature" id="degrees">-6</span>
             <span class="units">
-              <a href="#" class="celsius" id="celsiusLink">°C</a> |<a
+              <a href="#" class="celsius active" id="celsiusUnit">°C</a> |<a
                 href="#"
                 class="fahrenheit"
-                id="fahrenheitLink"
+                id="fahrenheitUnit"
                 >°F</a
               >
             </span>
