updated feelslike, modified loading page

--- a/index.html
+++ b/index.html
@@ -56,22 +56,17 @@
       <hr />
       <div class="current-weather">
         <div class="current-city">
-          <h1>Toronto</h1>
-          <h4>Canada</h4>
-          <p class="date-time" id="dateTime">Tuesday, Mar 1, 6:00 p.m</p>
+          <h1></h1>
+          <h4></h4>
+          <p class="date-time" id="dateTime"></p>
         </div>
         <div class="row align-items-center current-city-details">
           <div class="col-3">
-            <img
-              src="http://openweathermap.org/img/wn/10d@2x.png"
-              alt="clear"
-              class="weather-icon"
-              id="weatherIcon"
-            />
+            <img src="" alt="clear" class="weather-icon" id="weatherIcon" />
             <!-- <i class="fa-solid fa-sun weather-icon"></i> -->
           </div>
           <div class="col-5">
-            <span class="temperature" id="degrees">-6</span>
+            <span class="temperature" id="degrees"></span>
             <span class="units">
               <a href="#" class="celsius active" id="celsiusUnit">°C</a> |<a
                 href="#"
@@ -80,17 +75,16 @@
                 >°F</a
               >
             </span>
-            <p class="temperature-feels-like" id="tempFeelslike">
-              Feels like -14°
-            </p>
+            <div>
+              Feels like
+              <span class="temperature-feels-like" id="tempFeelslike"></span>
+            </div>
           </div>
           <div class="col-4">
             <ul class="weather-pattern">
-              <li class="weather-description" id="weatherDescription">Sunny</li>
-              <li>
-                Humidity: <span class="humidity" id="humidityId"> 56%</span>
-              </li>
-              <li>Wind: <span class="wind" id="windSpeed"> 15 km/h</span></li>
+              <li class="weather-description" id="weatherDescription"></li>
+              <li>Humidity: <span class="humidity" id="humidityId"></span></li>
+              <li>Wind: <span class="wind" id="windSpeed"></span></li>
             </ul>
           </div>
         </div>
