added forecast and styling

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
       </div>
       <hr />
-      <!-- <div class="row forecast">
+      <div class="row forecast">
         <div class="col">
           <h6 class="title">Tomorrow</h6>
           <i class="fa-solid fa-cloud"></i>
@@ -139,7 +139,7 @@
             <span class="max-temperature">-5°</span>
           </p>
         </div>
-      </div> -->
+      </div>
     </div>
     <div>
       <p class="coder">
