--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <form id="searchForm">
         <div class="search">
           <input
-            type="text"
+            type="search"
             class="search-city"
             placeholder="Enter your city"
             id="searchInput"
@@ -63,7 +63,6 @@
         <div class="row align-items-center current-city-details">
           <div class="col-3">
             <img src="" alt="clear" class="weather-icon" id="weatherIcon" />
-            <!-- <i class="fa-solid fa-sun weather-icon"></i> -->
           </div>
           <div class="col-5">
             <span class="temperature" id="degrees"></span>
