removed col values

--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
           <h4></h4>
           <p class="date-time" id="dateTime"></p>
         </div>
-        <div class="row align-items-center current-city-details">
-          <div class="col-3">
+        <div class="row current-city-details">
+          <div class="col">
             <img src="" alt="clear" class="weather-icon" id="weatherIcon" />
           </div>
-          <div class="col-5">
+          <div class="col">
             <span class="temperature" id="degrees"></span>
             <span class="units">
               <a href="#" class="celsius active" id="celsiusUnit">°C</a> |<a
@@ -79,7 +79,7 @@
               <span class="temperature-feels-like" id="tempFeelslike"></span>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col">
             <ul class="weather-pattern">
               <li class="weather-description" id="weatherDescription"></li>
               <li>Humidity: <span class="humidity" id="humidityId"></span></li>
