moved forecast from html to js, added css

--- a/index.html
+++ b/index.html
@@ -89,56 +89,7 @@
         </div>
       </div>
       <hr />
-      <div class="row forecast">
-        <div class="col">
-          <h6 class="title">Tomorrow</h6>
-          <i class="fa-solid fa-cloud"></i>
-          <p>
-            <span class="min-temperature"><strong>-4°</strong></span>
-            <span class="max-temperature">-10°</span>
-          </p>
-        </div>
-        <div class="col">
-          <h6 class="title">Mar 3</h6>
-          <i class="fa-solid fa-snowflake"></i>
-          <p>
-            <span class="min-temperature"><strong>-5°</strong></span>
-            <span class="max-temperature">-9°</span>
-          </p>
-        </div>
-        <div class="col">
-          <h6 class="title">Mar 4</h6>
-          <i class="fa-solid fa-cloud-sun-rain"></i>
-          <p>
-            <span class="min-temperature"><strong>-3°</strong></span>
-            <span class="max-temperature">-5°</span>
-          </p>
-        </div>
-        <div class="col">
-          <h6 class="title">Mar 5</h6>
-          <i class="fa-solid fa-cloud-sun"></i>
-          <p>
-            <span class="min-temperature"><strong>1°</strong></span>
-            <span class="max-temperature">-4°</span>
-          </p>
-        </div>
-        <div class="col">
-          <h6 class="title">Mar 6</h6>
-          <i class="fa-solid fa-cloud-rain"></i>
-          <p>
-            <span class="min-temperature"><strong>2°</strong></span>
-            <span class="max-temperature">-1°</span>
-          </p>
-        </div>
-        <div class="col">
-          <h6 class="title">Mar 7</h6>
-          <i class="fa-solid fa-cloud"></i>
-          <p>
-            <span class="min-temperature"><strong>-3°</strong></span>
-            <span class="max-temperature">-5°</span>
-          </p>
-        </div>
-      </div>
+      <div class="row forecast" id="dailyForecast"></div>
     </div>
     <div>
       <p class="coder">
