styled the weather description and icon

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
           <p class="date-time" id="dateTime"></p>
         </div>
         <div class="row current-city-details">
-          <div class="col">
+          <div class="col-4 align-self-center">
             <img src="" alt="clear" class="weather-icon" id="weatherIcon" />
           </div>
-          <div class="col">
+          <div class="col-4 align-self-center">
             <span class="temperature" id="degrees"></span>
             <span class="units">
               <a href="#" class="celsius active" id="celsiusUnit">°C</a> |<a
@@ -79,7 +79,7 @@
               <span class="temperature-feels-like" id="tempFeelslike"></span>
             </div>
           </div>
-          <div class="col">
+          <div class="col-4 align-self-center">
             <ul class="weather-pattern">
               <li class="weather-description" id="weatherDescription"></li>
               <li>Humidity: <span class="humidity" id="humidityId"></span></li>
