--- a/index.html
+++ b/index.html
@@ -1,103 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather Application</title>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Weather Application</title>
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+            crossorigin="anonymous"
+        />
 
-    <link rel="stylesheet" href="src/styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@500&display=swap"
-      rel="stylesheet"
-    />
+        <link rel="stylesheet" href="src/styles.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@500&display=swap"
+            rel="stylesheet"
+        />
 
-    <script
-      src="https://kit.fontawesome.com/5a36efa976.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  </head>
-  <body>
-    <div class="container">
-      <form id="searchForm">
-        <div class="search">
-          <input
-            type="search"
-            class="search-city"
-            placeholder="Enter your city"
-            id="searchInput"
-          />
-          <button
-            type="submit"
-            class="btn btn-outline-dark search-btn"
-            id="searchBtn"
-          >
-            Search
-          </button>
-          <button
-            type="button"
-            class="btn btn-outline-dark location-btn"
-            id="locationBtn"
-          >
-            <i class="fa-solid fa-location-dot"></i>
-          </button>
-        </div>
-      </form>
-      <hr />
-      <div class="current-weather">
-        <div class="current-city">
-          <h1></h1>
-          <h4></h4>
-          <p class="date-time" id="dateTime"></p>
-        </div>
-        <div class="row current-city-details">
-          <div class="col-4 align-self-center">
-            <img src="" alt="clear" class="weather-icon" id="weatherIcon" />
-          </div>
-          <div class="col-4 align-self-center">
-            <span class="temperature" id="degrees"></span>
-            <span class="units">
-              <a href="#" class="celsius active" id="celsiusUnit">°C</a> |<a
-                href="#"
-                class="fahrenheit"
-                id="fahrenheitUnit"
-                >°F</a
-              >
-            </span>
-            <div>
-              Feels like
-              <span class="temperature-feels-like" id="tempFeelslike"></span>
+        <script
+            src="https://kit.fontawesome.com/5a36efa976.js"
+            crossorigin="anonymous"
+        ></script>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    </head>
+    <body>
+        <div class="container">
+            <form id="searchForm">
+                <div class="search">
+                    <input
+                        type="search"
+                        class="search-city"
+                        placeholder="Enter your city"
+                        id="searchInput"
+                    />
+                    <button
+                        type="submit"
+                        class="btn btn-outline-dark search-btn"
+                        id="searchBtn"
+                    >
+                        Search
+                    </button>
+                    <button
+                        type="button"
+                        class="btn btn-outline-dark location-btn"
+                        id="locationBtn"
+                    >
+                        <i class="fa-solid fa-location-dot"></i>
+                    </button>
+                </div>
+            </form>
+            <hr />
+            <div class="current-weather">
+                <div class="current-city">
+                    <h1></h1>
+                    <h4></h4>
+                    <p class="date-time" id="dateTime"></p>
+                </div>
+                <div class="row current-city-details">
+                    <div class="col-4 align-self-center">
+                        <img
+                            src=""
+                            alt="clear"
+                            class="weather-icon"
+                            id="weatherIcon"
+                        />
+                    </div>
+                    <div class="col-4 align-self-center">
+                        <span class="temperature" id="degrees"></span>
+                        <span class="units">
+                            <a href="#" class="celsius active" id="celsiusUnit"
+                                >°C</a
+                            >
+                            |<a href="#" class="fahrenheit" id="fahrenheitUnit"
+                                >°F</a
+                            >
+                        </span>
+                        <div>
+                            Feels like
+                            <span
+                                class="temperature-feels-like"
+                                id="tempFeelslike"
+                            ></span>
+                        </div>
+                    </div>
+                    <div class="col-4 align-self-center">
+                        <ul class="weather-pattern">
+                            <li
+                                class="weather-description"
+                                id="weatherDescription"
+                            ></li>
+                            <li>
+                                Humidity:
+                                <span class="humidity" id="humidityId"></span>
+                            </li>
+                            <li>
+                                Wind: <span class="wind" id="windSpeed"></span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="col-4 align-self-center">
-            <ul class="weather-pattern">
-              <li class="weather-description" id="weatherDescription"></li>
-              <li>Humidity: <span class="humidity" id="humidityId"></span></li>
-              <li>Wind: <span class="wind" id="windSpeed"></span></li>
-            </ul>
-          </div>
+            <hr />
+            <div class="row forecast" id="dailyForecast"></div>
         </div>
-      </div>
-      <hr />
-      <div class="row forecast" id="dailyForecast"></div>
-    </div>
-    <div>
-      <p class="coder">
-        <a href="https://github.com/kprathyusha/weather-app" target="blank"
-          >Open-source code by</a
-        ><span> Prathyusha K</span>
-      </p>
-    </div>
-    <script src="src/index.js"></script>
-  </body>
+        <div>
+            <p class="coder">
+                <a
+                    href="https://github.com/kprathyusha/weather-app"
+                    target="blank"
+                    >Open-source code by</a
+                ><span> Prathyusha K</span>
+            </p>
+        </div>
+        <script src="src/index.js"></script>
+    </body>
 </html>
