removed the focus offset from search input

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                         class="search-city"
                         placeholder="Enter your city"
                         id="searchInput"
+                        autofocus="off"
                     />
                     <button
                         type="submit"
