--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@500&display=swap"
             rel="stylesheet"
         />
-
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDePEFd8J-dxiq98tqRl5qw-cHjN7y0jXw&libraries=places"></script>
         <script
             src="https://kit.fontawesome.com/5a36efa976.js"
             crossorigin="anonymous"
@@ -62,7 +62,7 @@
                     <p class="date-time" id="dateTime"></p>
                 </div>
                 <div class="row current-city-details">
-                    <div class="col-4 align-self-center">
+                    <div class="col-sm-4 align-self-center">
                         <img
                             src=""
                             alt="clear"
@@ -70,7 +70,7 @@
                             id="weatherIcon"
                         />
                     </div>
-                    <div class="col-4 align-self-center">
+                    <div class="col-sm-4 align-self-center">
                         <span class="temperature" id="degrees"></span>
                         <span class="units">
                             <a href="#" class="celsius active" id="celsiusUnit"
@@ -88,7 +88,7 @@
                             ></span>
                         </div>
                     </div>
-                    <div class="col-4 align-self-center">
+                    <div class="col-sm-4 align-self-center">
                         <ul class="weather-pattern">
                             <li
                                 class="weather-description"
